# lidar

install/: local_setup.sh  setup.sh
install/version0/lib/version0/: VEL.py  action_client.py  service_client.py  service_server.py
install/version0/share/version0/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/version0/share/version0/action/: Navigate.action  Navigate.idl
install/version0/share/version0/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_version0__rosidl_generator_cExport-noconfig.cmake  export_version0__rosidl_generator_cExport.cmake  export_version0__rosidl_generator_pyExport-noconfig.cmake  export_version0__rosidl_generator_pyExport.cmake  export_version0__rosidl_typesupport_fastrtps_cExport.cmake  export_version0__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  version0Config-version.cmake  (+7 more)
install/version1/share/version1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/version0/: CMakeLists.txt  README.txt
src/version0.1/: CMakeLists.txt
src/version0.1/models/RplidarA1/: model.config
src/version0.1/worlds/: visualize_lidar.sdf
src/version0/models/RplidarA1/: RplidarA1.sdf
src/version0/scripts/: action_server.py  publisher_laserscan.py
src/version1/: CMakeLists.txt  README.txt  package.xml
src/version1/launch/: lidar_python_launch.py
src/version1/scripts/: publisher_filtro.py  publisher_laserscan.py
src/version1/worlds/: visualize_lidar.sdf
(+150 files in other folders)
